RESOLVED FIXED159686
REGRESSION(r202953): Clicking on input[type=file] doesn't open a file picker
https://bugs.webkit.org/show_bug.cgi?id=159686
Summary REGRESSION(r202953): Clicking on input[type=file] doesn't open a file picker
Ryosuke Niwa
Reported 2016-07-12 14:02:04 PDT
After https://trac.webkit.org/changeset/202953, user can't open file picker on a file input field.
Attachments
Fixes the bug (8.50 KB, patch)
2016-07-12 14:09 PDT, Ryosuke Niwa
no flags
Archive of layout-test-results from ews105 for mac-yosemite-wk2 (923.63 KB, application/zip)
2016-07-12 14:59 PDT, Build Bot
no flags
Archive of layout-test-results from ews124 for ios-simulator-wk2 (632.24 KB, application/zip)
2016-07-12 15:05 PDT, Build Bot
no flags
Rebaselined tests (14.33 KB, patch)
2016-07-12 15:31 PDT, Ryosuke Niwa
no flags
Archive of layout-test-results from ews122 for ios-simulator-wk2 (694.02 KB, application/zip)
2016-07-12 16:39 PDT, Build Bot
no flags
Skip the test on iOS (14.47 KB, patch)
2016-07-12 17:02 PDT, Ryosuke Niwa
cdumez: review+
cdumez: commit-queue-
Ryosuke Niwa
Comment 1 2016-07-12 14:02:49 PDT
Ryosuke Niwa
Comment 2 2016-07-12 14:09:09 PDT
Created attachment 283444 [details] Fixes the bug
Chris Dumez
Comment 3 2016-07-12 14:24:49 PDT
Comment on attachment 283444 [details] Fixes the bug View in context: https://bugs.webkit.org/attachment.cgi?id=283444&action=review > Source/WebCore/dom/Event.cpp:100 > + || m_type == eventNames().DOMActivateEvent How about DOMFocusIn / DOMFocusOut events? https://github.com/w3c/uievents/pull/93/files seems to indicate they should be composed as well. > LayoutTests/fast/forms/file/open-file-panel.html:5 > +To manually test, click on the button below. WebKit should open a file picker.</p> We should probably add a line saying this test passes if "OPEN FILE PANEL" is printed.
Chris Dumez
Comment 4 2016-07-12 14:40:48 PDT
Looks like it is failing some tests on the bots as well: Regressions: Unexpected text-only failures (3) accessibility/axpress-on-aria-button.html [ Failure ] accessibility/file-upload-button-with-axpress.html [ Failure ] fast/events/domactivate-sets-underlying-click-event-as-handled.html [ Failure ]
Ryosuke Niwa
Comment 5 2016-07-12 14:49:05 PDT
Comment on attachment 283444 [details] Fixes the bug View in context: https://bugs.webkit.org/attachment.cgi?id=283444&action=review >> Source/WebCore/dom/Event.cpp:100 >> + || m_type == eventNames().DOMActivateEvent > > How about DOMFocusIn / DOMFocusOut events? > https://github.com/w3c/uievents/pull/93/files seems to indicate they should be composed as well. They're covered by isFocusEvent check below. >> LayoutTests/fast/forms/file/open-file-panel.html:5 >> +To manually test, click on the button below. WebKit should open a file picker.</p> > > We should probably add a line saying this test passes if "OPEN FILE PANEL" is printed. Sure, not when it's manually tested though.
Build Bot
Comment 6 2016-07-12 14:59:27 PDT
Comment on attachment 283444 [details] Fixes the bug Attachment 283444 [details] did not pass mac-wk2-ews (mac-wk2): Output: http://webkit-queues.webkit.org/results/1670506 New failing tests: fast/events/domactivate-sets-underlying-click-event-as-handled.html accessibility/axpress-on-aria-button.html accessibility/file-upload-button-with-axpress.html
Build Bot
Comment 7 2016-07-12 14:59:33 PDT
Created attachment 283452 [details] Archive of layout-test-results from ews105 for mac-yosemite-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews105 Port: mac-yosemite-wk2 Platform: Mac OS X 10.10.5
Build Bot
Comment 8 2016-07-12 15:05:31 PDT
Comment on attachment 283444 [details] Fixes the bug Attachment 283444 [details] did not pass ios-sim-ews (ios-simulator-wk2): Output: http://webkit-queues.webkit.org/results/1670505 New failing tests: fast/forms/file/open-file-panel.html
Build Bot
Comment 9 2016-07-12 15:05:36 PDT
Created attachment 283454 [details] Archive of layout-test-results from ews124 for ios-simulator-wk2 The attached test failures were seen while running run-webkit-tests on the ios-sim-ews. Bot: ews124 Port: ios-simulator-wk2 Platform: Mac OS X 10.11.5
Ryosuke Niwa
Comment 10 2016-07-12 15:31:35 PDT
Created attachment 283462 [details] Rebaselined tests
Build Bot
Comment 11 2016-07-12 16:39:49 PDT
Comment on attachment 283462 [details] Rebaselined tests Attachment 283462 [details] did not pass ios-sim-ews (ios-simulator-wk2): Output: http://webkit-queues.webkit.org/results/1670848 New failing tests: fast/forms/file/open-file-panel.html
Build Bot
Comment 12 2016-07-12 16:39:54 PDT
Created attachment 283468 [details] Archive of layout-test-results from ews122 for ios-simulator-wk2 The attached test failures were seen while running run-webkit-tests on the ios-sim-ews. Bot: ews122 Port: ios-simulator-wk2 Platform: Mac OS X 10.11.5
Ryosuke Niwa
Comment 13 2016-07-12 17:02:37 PDT
Created attachment 283474 [details] Skip the test on iOS
Carlos Garcia Campos
Comment 14 2016-07-13 06:38:29 PDT
*** Bug 159675 has been marked as a duplicate of this bug. ***
Chris Dumez
Comment 15 2016-07-13 09:12:52 PDT
Comment on attachment 283474 [details] Skip the test on iOS View in context: https://bugs.webkit.org/attachment.cgi?id=283474&action=review r=me with comment. > LayoutTests/fast/forms/file/open-file-panel-expected.txt:2 > +This test checks that clicking on an file input field opens up a file picker. Again, there is no information about determining if this test is passing (when running as a layout test). You only provide instructions about running this manually which is not the common case. What's going to prevent someone from rebasing this file in the future if the "OPEN FILE PANEL" is no longer printed? Without the "OPEN FILE PANEL", it is currently not obvious that this test is failing.
Ryosuke Niwa
Comment 16 2016-07-13 09:14:38 PDT
Comment on attachment 283474 [details] Skip the test on iOS View in context: https://bugs.webkit.org/attachment.cgi?id=283474&action=review >> LayoutTests/fast/forms/file/open-file-panel-expected.txt:2 >> +This test checks that clicking on an file input field opens up a file picker. > > Again, there is no information about determining if this test is passing (when running as a layout test). You only provide instructions about running this manually which is not the common case. What's going to prevent someone from rebasing this file in the future if the "OPEN FILE PANEL" is no longer printed? Without the "OPEN FILE PANEL", it is currently not obvious that this test is failing. Oh oops, I forgot to add that. Will do before landing.
Ryosuke Niwa
Comment 17 2016-07-13 13:53:07 PDT
Note You need to log in before you can comment on or make changes to this bug.